新增功能 倒數計時在擴充套件的icon上 單位是分鐘 網站規則管理 建立時 要選擇 要不要顯示秒數 , 並一律不能開啟在擴展圖標顯示倒數（分鐘） 點信號燈 可以切換顯示時間

--- a/popup.html
+++ b/popup.html
@@ -127,10 +127,21 @@
   
   <div class="time-section">
     <div class="section-title">顯示設定</div>
-    <label style="display: flex; align-items: center; gap: 10px; cursor: pointer;">
+    <label style="display: flex; align-items: center; gap: 10px; cursor: pointer; margin-bottom: 10px;">
       <input type="checkbox" id="showTimeCheckbox" checked style="width: 20px; height: 20px; cursor: pointer;">
       <span style="font-size: 14px;">顯示倒數時間</span>
     </label>
+    <label style="display: flex; align-items: center; gap: 10px; cursor: pointer;">
+      <input type="checkbox" id="showBadgeCheckbox" checked style="width: 20px; height: 20px; cursor: pointer;">
+      <span style="font-size: 14px;">在擴展圖標顯示倒數（分鐘）</span>
+    </label>
+  </div>
+  
+  <div class="time-section">
+    <div class="section-title">網站自動計時</div>
+    <button class="control-btn" id="siteRulesBtn" style="width: 100%; background: #8b5cf6; color: white; margin-bottom: 0;">
+      管理網站規則
+    </button>
   </div>
   
   <div class="control-buttons">
