--- a/site-rules.html
+++ b/site-rules.html
@@ -14,48 +14,53 @@
       font-family: "Microsoft JhengHei", Arial, sans-serif;
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       min-height: 100vh;
-      padding: 40px 20px;
+      padding: 20px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     .container {
-      max-width: 800px;
-      margin: 0 auto;
+      max-width: 700px;
+      width: 100%;
       background: white;
-      border-radius: 20px;
-      padding: 40px;
+      border-radius: 16px;
+      padding: 25px;
       box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+      max-height: 95vh;
+      overflow-y: auto;
     }
     h1 {
       color: #667eea;
-      margin-bottom: 10px;
-      font-size: 32px;
+      margin-bottom: 5px;
+      font-size: 26px;
     }
     .subtitle {
       color: #666;
-      margin-bottom: 30px;
-      font-size: 14px;
+      margin-bottom: 20px;
+      font-size: 13px;
     }
     .add-section {
       background: #f8f9fa;
-      border-radius: 12px;
-      padding: 25px;
-      margin-bottom: 30px;
+      border-radius: 10px;
+      padding: 18px;
+      margin-bottom: 20px;
     }
     .form-group {
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
     label {
       display: block;
-      margin-bottom: 8px;
+      margin-bottom: 6px;
       font-weight: bold;
       color: #333;
-      font-size: 14px;
+      font-size: 13px;
     }
     input[type="text"], input[type="number"] {
       width: 100%;
-      padding: 12px;
+      padding: 10px;
       border: 2px solid #e0e0e0;
       border-radius: 8px;
-      font-size: 14px;
+      font-size: 13px;
       transition: border 0.3s;
     }
     input[type="text"]:focus, input[type="number"]:focus {
@@ -70,10 +75,10 @@
       flex: 1;
     }
     .btn {
-      padding: 12px 24px;
+      padding: 10px 20px;
       border: none;
       border-radius: 8px;
-      font-size: 16px;
+      font-size: 14px;
       font-weight: bold;
       cursor: pointer;
       transition: all 0.3s;
@@ -103,9 +108,9 @@
     .rule-item {
       background: white;
       border: 2px solid #e0e0e0;
-      border-radius: 12px;
-      padding: 20px;
-      margin-bottom: 15px;
+      border-radius: 10px;
+      padding: 15px;
+      margin-bottom: 12px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -119,30 +124,30 @@
       flex: 1;
     }
     .rule-url {
-      font-size: 16px;
+      font-size: 14px;
       font-weight: bold;
       color: #333;
-      margin-bottom: 5px;
+      margin-bottom: 4px;
       word-break: break-all;
     }
     .rule-time {
-      font-size: 14px;
+      font-size: 13px;
       color: #667eea;
       font-weight: bold;
     }
     .empty-state {
       text-align: center;
-      padding: 60px 20px;
+      padding: 40px 20px;
       color: #999;
     }
     .empty-state-icon {
-      font-size: 64px;
-      margin-bottom: 20px;
+      font-size: 48px;
+      margin-bottom: 15px;
     }
     .help-text {
-      font-size: 12px;
+      font-size: 11px;
       color: #666;
-      margin-top: 5px;
+      margin-top: 4px;
       font-style: italic;
     }
   </style>
@@ -180,7 +185,7 @@
       <button class="btn btn-primary" id="addRuleBtn">➕ 新增規則</button>
     </div>
     
-    <h2 style="margin-bottom: 15px; font-size: 20px; color: #333;">已設定的規則</h2>
+    <h2 style="margin-bottom: 12px; font-size: 18px; color: #333;">已設定的規則</h2>
     <div class="rules-list" id="rulesList">
       <div class="empty-state">
         <div class="empty-state-icon">📝</div>
