--- a/popup.html
+++ b/popup.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>倒數計時</title>
+    <title data-i18n="title">倒數計時</title>
     <style>
       body {
         width: 320px;
@@ -162,7 +162,7 @@
     </style>
   </head>
   <body>
-    <h2>⌛ 倒數計時</h2>
+    <h2>⌛ <span data-i18n="title">倒數計時</span></h2>
 
     <div class="time-section">
       <div class="time-input-group">
@@ -184,12 +184,12 @@
           value="0"
           placeholder="0"
         />
-        <span class="time-unit">秒</span>
+        <span class="time-unit" data-i18n="seconds">秒</span>
       </div>
     </div>
 
     <div class="time-section">
-      <div class="section-title">顯示設定</div>
+      <div class="section-title" data-i18n="displaySettings">顯示設定</div>
       <label
         style="
           display: flex;
@@ -205,7 +205,7 @@
           checked
           style="width: 18px; height: 18px; cursor: pointer"
         />
-        <span style="font-size: 13px">顯示倒數時間</span>
+        <span style="font-size: 13px" data-i18n="showTime">顯示倒數時間</span>
       </label>
       <label
         style="display: flex; align-items: center; gap: 8px; cursor: pointer"
@@ -216,12 +216,12 @@
           checked
           style="width: 18px; height: 18px; cursor: pointer"
         />
-        <span style="font-size: 13px">在擴展圖標顯示倒數（分鐘）</span>
+        <span style="font-size: 13px" data-i18n="showBadge">在擴展圖標顯示倒數（分鐘）</span>
       </label>
     </div>
 
     <div class="time-section">
-      <div class="section-title">燈號設定</div>
+      <div class="section-title" data-i18n="lightSettings">燈號設定</div>
       <div style="display: flex; flex-direction: column; gap: 8px">
         <div
           style="
@@ -231,7 +231,7 @@
             gap: 10px;
           "
         >
-          <div style="font-weight: bold; font-size: 13px; width: 65px">
+          <div style="font-weight: bold; font-size: 13px; width: 65px" data-i18n="greenLight">
             🟢 綠燈 >
           </div>
           <div class="time-input-group">
@@ -253,7 +253,7 @@
               value="0"
               placeholder="0"
             />
-            <span class="time-unit">秒</span>
+            <span class="time-unit" data-i18n="seconds">秒</span>
           </div>
         </div>
         <div
@@ -264,7 +264,7 @@
             gap: 10px;
           "
         >
-          <div style="font-weight: bold; font-size: 13px; width: 65px">
+          <div style="font-weight: bold; font-size: 13px; width: 65px" data-i18n="redLight">
             🔴 紅燈 ≤
           </div>
           <div class="time-input-group">
@@ -286,7 +286,7 @@
               value="10"
               placeholder="0"
             />
-            <span class="time-unit">秒</span>
+            <span class="time-unit" data-i18n="seconds">秒</span>
           </div>
         </div>
         <div
@@ -296,6 +296,7 @@
             font-style: italic;
             margin-top: 2px;
           "
+          data-i18n="yellowLightInfo"
         >
           🟡 黃燈：介於紅燈與綠燈之間
         </div>
@@ -303,23 +304,25 @@
     </div>
 
     <div class="time-section">
-      <div class="section-title">網站自動計時</div>
+      <div class="section-title" data-i18n="siteAutoTimer">網站自動計時</div>
       <button
         class="control-btn"
         id="siteRulesBtn"
         style="width: 100%; background: #8b5cf6; color: white; padding: 8px"
+        data-i18n="manageSiteRules"
       >
         管理網站規則
       </button>
     </div>
 
     <div class="control-buttons">
-      <button class="control-btn start-btn" id="startBtn">開始</button>
-      <button class="control-btn reset-btn" id="resetBtn">清除</button>
+      <button class="control-btn start-btn" id="startBtn" data-i18n="start">開始</button>
+      <button class="control-btn reset-btn" id="resetBtn" data-i18n="clear">清除</button>
     </div>
 
     <div class="status" id="status">&nbsp;</div>
 
+    <script src="i18n.js"></script>
     <script src="popup.js"></script>
   </body>
 </html>
